# web-embed-starter

./: Cargo.toml  LICENSE  README.md
src/: logger.rs  main.rs  ping.rs
webui/: package.json  vite.config.ts
webui/src/pages/: index.vue
